@@ -3,6 +3,9 @@
 - added: `WORKER()` alias to `F.worker()`
 - added: `WORKER2()` alias to `F.worker2()`
 - added: `F.cluster.https()`
+- added: `TaskBuilder.done2([send_value])` returns `function` with wrapped `.done()`
+- added: `TaskBuilder.success2([send_value])` returns `function` with wrapped `.success()`
+- added: `TaskBuilder.next2(name)` returns `function` with wrapped `.next()`
 
 - updated: `F.worker2()` returns entire `stdout` buffer in the `callback(err, buffer)`
 - updated: `$options()` by adding `disabled` key
